# raycasting_game

./: .gitignore  CMakeLists.txt  Makefile  README.md  cub3d.c  main.c
includes/: bitmap.h  cub3d.h  parser.h  utils.h
srcs/: cub3d.c  events.c  map1.cub  map11.cub  minimap.c  parser.c  save.c  sprite.c
srcs/gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c
srcs/layers/: first_view.c  floor_ceiling.c  minimap.c
srcs/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_diglen.c  ft_isalnum.c  ft_isalnumsign.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isinset.c  ft_isprint.c  ft_ispunct.c  ft_isspace.c  ft_itoa.c  ft_lst_push_back.c  ft_lst_push_front.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putchar_mod.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putnbr_mod.c  ft_putstr_fd.c  ft_putstr_mod.c  ft_split.c  (+16 more)
srcs/maps/: map1.cub  map2_extreme_len.cub  map3_XS.cub  map4_many_sprites.cub  map5_XL.cub  map6_XL2.cub
srcs/minilibx/: mlx.h
srcs/textures/: WALL1.xpm  WALL2.xpm  WALL3.xpm  WALL4.xpm  WALL_E.xpm  WALL_N.xpm  WALL_S.xpm  WALL_W.xpm  cat.xpm  kitty.xpm
srcs/utils/: events.c  events_utils.c  init_structures.c  parser_map_checker.c  parser_utils.c  player_utils.c  ray_utils.c  screen_utils.c  shutdown.c  texture_utils.c
